# ModernCppChallengeWithTDDSolutions

./: README.md
MathProblems/1/: CMakeLists.txt  SumDivisible.cpp  SumDivisible.h  SumDivisibleTest.cpp
MathProblems/13/: BNC.cpp  BNC.h  BNCTest.cpp  BinaryEncoder.cpp  BinaryEncoder.h  CMakeLists.txt  Pi.cpp  Pi.h  PiTest.cpp  main.cpp
MathProblems/4/: CMakeLists.txt  PrimeFinder.cpp  PrimeFinder.h  PrimeFinderTest.cpp
